package transactionProject.exceptions;

public class InputException extends RuntimeException {

    public InputException(String message) {
        super(message);
    }
}
