package transactionProject.model;

public interface Tabular {
    String getColumns();
    String getDate();
}
